--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.4",
     "aos": "^2.3.4",
+    "framer-motion": "^11.9.0",
     "lucide": "^0.445.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
