--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide": "^0.445.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
+    "p5": "^1.11.1",
     "react": "^18",
     "react-dom": "^18",
     "typewriter-effect": "^2.21.0"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
+    "@types/p5": "^1.7.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
