--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "p5": "^1.11.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-syntax-highlighter": "^15.6.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/p5": "^1.7.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
