--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-spring/web": "^9.7.4",
     "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "lucide": "^0.445.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
+    "next-intl": "^3.26.3",
     "p5": "^1.11.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
